test/files/neg/names-defaults-neg-warn.check
names-defaults-neg-warn.scala:23: error: reference to x is ambiguous; it is both a method parameter and a variable in scope.
    f1(x = 1) // 2.12: error, ambiguous (named arg or assign). 2.13: named arg
         ^
names-defaults-neg-warn.scala:44: error: reassignment to val
    f2(x = 1) // 2.12, 2.13: error (no such parameter). no deprecation warning in 2.12, x is not a variable.
         ^
names-defaults-neg-warn.scala:12: warning: the parameter name s is deprecated: use x instead
  deprNam2.f(s = "dlfkj")
               ^
names-defaults-neg-warn.scala:13: warning: the parameter name x is deprecated: use s instead
  deprNam2.g(x = "dlkjf")
               ^
names-defaults-neg-warn.scala:24: warning: assignments in argument position are deprecated in favor of named arguments. Wrap the assignment in brackets, e.g., `{ x = ... }`.
    f2(x = 1) // 2.12: deprecation warning, compiles. 2.13: error, no parameter named x
         ^
names-defaults-neg-warn.scala:35: warning: assignments in argument position are deprecated in favor of named arguments. Wrap the assignment in brackets, e.g., `{ x = ... }`.
    synchronized(x = 1) // deprecation warning in 2.12, error in 2.13
                   ^
four warnings found
two errors found
